[package]
name = "cosmic-conductor"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "xtask"
]

[dependencies]
clap = { version = "4.5.42", features = ["derive"] }
cosmic-protocols = { version = "0.1.0", git = "https://github.com/pop-os/cosmic-protocols" }
cosmic-client-toolkit = { version = "0.1.0", git = "https://github.com/pop-os/cosmic-protocols" }
log = "0.4.27"
simple_logger = "5.0.0"
wayland-client = "0.31.11"
wayland-protocols = "0.32.9"
itertools = "0.14.0"
anyhow = "1.0.99"
json_pretty = "0.1.2"


[package.metadata.release]
allow-branch = ["main"]
publish = false
pre-release-replacements = [
  {file="CHANGELOG.md", search="Unreleased", replace="{{version}}"},
  {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
  {file="CHANGELOG.md", search="ReleaseDate", replace="{{date}}"},
  {file="CHANGELOG.md", search="<!-- next-header -->", replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate", exactly=1},
  {file="CHANGELOG.md", search="<!-- next-url -->", replace="<!-- next-url -->\n[Unreleased]: https://github.com/wasabi375/cosmic-conductor/compare/{{tag_name}}...HEAD", exactly=1},
]
